deps: regenerate sdl
