# openapi_filtered.yaml
@@ -2452,6 +2452,97 @@ paths:
                   $ref: '#/components/schemas/NotefileSchema'
       tags:
       - project
+  /v1/projects/{projectOrProductUID}/usage/data:
+    get:
+      operationId: getDataUsage
+      description: Get data usage in bytes for a project with time range and period
+        aggregation
+      parameters:
+      - $ref: '#/components/parameters/projectOrProductUIDParam'
+      - $ref: '#/components/parameters/startDateParam'
+      - $ref: '#/components/parameters/endDateParam'
+      - $ref: '#/components/parameters/deviceUIDParamQuery'
+      - name: period
+        in: query
+        description: Period type for aggregation
+        required: true
+        schema:
+          type: string
+          enum:
+          - day
+          - week
+          - month
+      responses:
+        '200':
+          $ref: '#/components/responses/UsageDataResponse'
+        default:
+          $ref: '#/components/responses/ErrorResponse'
+      security:
+      - api_key: []
+      tags:
+      - usage
+  /v1/projects/{projectOrProductUID}/usage/events:
+    get:
+      operationId: getProjectEventsUsage
+      description: Get events usage for a project with time range and period aggregation,
+        when endDate is 0 or unspecified the current time is implied
+      parameters:
+      - $ref: '#/components/parameters/projectOrProductUIDParam'
+      - $ref: '#/components/parameters/startDateParam'
+      - $ref: '#/components/parameters/endDateParam'
+      - $ref: '#/components/parameters/deviceUIDParamQuery'
+      - name: period
+        in: query
+        description: Period type for aggregation
+        required: true
+        schema:
+          type: string
+          enum:
+          - day
+          - week
+          - month
+      responses:
+        '200':
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/UsageEventsResponse'
+        default:
+          $ref: '#/components/responses/ErrorResponse'
+      security:
+      - personalAccessToken: []
+      tags:
+      - usage
+  /v1/projects/{projectOrProductUID}/usage/sessions:
+    get:
+      operationId: getSessionsUsage
+      description: Get sessions usage for a project with time range and period aggregation,
+        when endDate is 0 or unspecified the current time is implied
+      parameters:
+      - $ref: '#/components/parameters/projectOrProductUIDParam'
+      - $ref: '#/components/parameters/startDateParam'
+      - $ref: '#/components/parameters/endDateParam'
+      - $ref: '#/components/parameters/deviceUIDParamQuery'
+      - name: period
+        in: query
+        description: Period type for aggregation
+        required: true
+        schema:
+          type: string
+          enum:
+          - day
+          - week
+          - month
+      responses:
+        '200':
+          $ref: '#/components/responses/UsageSessionsResponse'
+        default:
+          $ref: '#/components/responses/ErrorResponse'
+      security:
+      - personalAccessToken: []
+      tags:
+      - usage
   /v1/projects/{projectOrProductUID}/webhooks:
     get:
       operationId: GetWebhooks
